--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                                             stroke-width: 0.3;
                                         }
                                         .sm {
-                                            stroke: #00c3ff;
+                                            stroke: #648fff;
                                         }
                                         .vm {
-                                            stroke: #189af6;
+                                            stroke: #dc267f;
                                         }
                                         .is {
-                                            stroke: #125389;
+                                            stroke: #ffb000;
                                         }
                                         .hide {
                                             display: none;
