--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <p>Como de indica más arriba, el Proyecto de Título consiste en un trabajo tutelado, de carácter autónomo, que el estudiantado debe resolver en el último año del plan de estudios. Como el año lectivo se divide en dos semestres, Proyecto de Título también se divide en dos niveles (I y II).</p>
                             <p>
                                 La asignatura de Proyecto de Título II se imparte desde el segundo semestre del año 2021. El registro muestra que cada semestre la cantidad de
-                                <em><small style="background: #9b9b9b;">&nbsp;&nbsp;&nbsp;&nbsp;</small> reprobados(as)</em> es importante, pero desde el segundo semestre del año 2023 esa cantidad es menor que la suma de quienes aprueban la
+                                <em><small style="background: #828282;">&nbsp;&nbsp;&nbsp;&nbsp;</small> reprobados(as)</em> es importante, pero desde el segundo semestre del año 2023 esa cantidad es menor que la suma de quienes aprueban la
                                 asignatura para obtener su Título Profesional de <em><small style="background: #648fff;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a)</em>,
                                 <em><small style="background: #dc267f;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a) con mención en Visualidad y Medios</em>, y
                                 <em><small style="background: #125389;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a) con mención Industrial y Servicios</em>.
