--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <em><small style="background: #828282;">&nbsp;&nbsp;&nbsp;&nbsp;</small> reprobados(as)</em> es importante, pero desde el segundo semestre del año 2023 esa cantidad es menor que la suma de quienes aprueban la
                                 asignatura para obtener su Título Profesional de <em><small style="background: #648fff;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a)</em>,
                                 <em><small style="background: #dc267f;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a) con mención en Visualidad y Medios</em>, y
-                                <em><small style="background: #125389;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a) con mención Industrial y Servicios</em>.
+                                <em><small style="background: #ffb000;">&nbsp;&nbsp;&nbsp;&nbsp;</small> Diseñador(a) con mención Industrial y Servicios</em>.
                             </p>
                             <p>Corresponde indicar que se cuentan como reprobados(as) a quienes, habiendo inscrito Proyecto de Título II, no hacen la entrega final correspondiente a la asignatura o la hacen para después reprobar el examen de título.</p>
                         </article>
@@ -54,7 +54,7 @@
                             </figure>
                             <p>
                                 La guía de 207 proyectos aprobados, conducentes al título profesional universitario de <small style="background: #648fff;">&nbsp;&nbsp;&nbsp;&nbsp;</small> <em>Diseñador(a)</em>,
-                                <small style="background: #125389;">&nbsp;&nbsp;&nbsp;&nbsp;</small> <em>Diseñador(a) con mención Industrial y Servicios</em> y <small style="background: #dc267f;">&nbsp;&nbsp;&nbsp;&nbsp;</small>
+                                <small style="background: ##ffb000;">&nbsp;&nbsp;&nbsp;&nbsp;</small> <em>Diseñador(a) con mención Industrial y Servicios</em> y <small style="background: #dc267f;">&nbsp;&nbsp;&nbsp;&nbsp;</small>
                                 <em>Diseñador(a) con mención en Visualidad y Medios</em>, se distribuye entre 38 Profesores(as) Guía.
                             </p>
                             <p>El asterisco a la derecha de 9 nombres es para indicar que, al año 2025, tal Profesor(a) Guía <em>no</em> continúa en el rol.</p>
